# tool-png2avif

./: README.md  png2avif.py  pyproject.toml  requirements.txt
test/: test_png2avif.py
